fixed body overflow

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4,6 +4,9 @@ body {
 	font-family: Roboto;
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
 #body-content {
